--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
 
     <!-- Substitua o caminho da imagem pelo caminho da imagem que deseja exibir -->
-    <img src="C:\Users\Raul\Downloads\imagem.png" alt="Descrição da Imagem">
+    <img src="https://github.com/DrIvoRobotniks/Teste/blob/main/imagem.png?raw=true" alt="Descrição da Imagem">
 
 </body>
 </html>
